Trying to fix skills overlap

--- a/assets/stylesheets/_navigation.scss
+++ b/assets/stylesheets/_navigation.scss
@@ -86,22 +86,19 @@
 
   &__item {
     margin: 2rem 1rem;
-    // transition: all 0.2s ease;
-
     &:hover {
       border-bottom: 0.2rem solid $white;
     }
   }
 
   &__link {
-    border: 1px solid red;
     color: $dirty-white;
     font-weight: 200;
     text-transform: uppercase;
-    transition: all 0.5s ease;
+    transition: all 0.5s ease-in-out;
     &:hover {
-      color: $white;
-      transform: translate(1.5rem);
+      color: $orange;
+      transform: translateX(0.5rem);
     }
   }
 
