--- a/assets/stylesheets/_skills.scss
+++ b/assets/stylesheets/_skills.scss
@@ -2,6 +2,7 @@
   height: auto;
   padding: 1.5rem;
   margin: 5rem 0;
+  border: 1px solid $orange;
 
   @include flexPoint(column, space-between );
 
@@ -110,20 +111,18 @@
     }
 
     .soft-wrapper {
+      height: auto;
       span {
         display: inline-block;
         background: linear-gradient(to right bottom, $light-blue, $dark-blue);
-        height: 3rem;
         padding: 1rem;
-        margin: 0.2rem;
-        padding-bottom: 3rem;
+         margin: 0.5rem;
         border-radius: 0.5rem;
         color: $white;
         font-size: 1.5rem;
         text-align: center;
-        transition: all 0.5s ease;
+        transition: all 0.5s ease-in-out;
         cursor: pointer;
-  
         &:hover {
           transform: scale(1.1);
           box-shadow: 0 0.5rem 2rem $dark;
